Closed Bug 1549011 Opened 5 years ago Closed 5 years ago

Ignore cookie name-value-pair strings with an empty name

Categories

(Core :: Networking: Cookies, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox68 --- fixed

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

https://tools.ietf.org/html/rfc6265 Section 5.2. "The Set-Cookie Header" step 5 says:

  1. If the name string is empty, ignore the set-cookie-string
    entirely.

We currently don't adhere to the RFC here and are the only engine failing some WPT tests related to this.

Assignee: nobody → ehsan
Whiteboard: [necko-triaged]
Priority: -- → P2
Pushed by eakhgari@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e8597b0c4aab
Ignore cookie name-value-pair strings with an empty name; r=baku
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: