Bug 1549011 - Ignore cookie name-value-pair strings with an empty name; r=baku

Differential Revision: https://phabricator.services.mozilla.com/D29929

--HG--
extra : moz-landing-system : lando